--- a/ui.ui
+++ b/ui.ui
@@ -445,6 +445,9 @@
            <property name="text">
             <string>Banda Pasante</string>
            </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item>
@@ -565,6 +568,9 @@
            </property>
            <property name="text">
             <string>Banda Pasante</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
